global css focus

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,11 +9,20 @@
 }
 
 @layer base {
+  *[id] {
+    scroll-margin-top: 6rem;
+  }
+
   body {
     font-family: Nunito, ui-sans-serif, system-ui, -apple-system,
       BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
       'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
       'Segoe UI Symbol', 'Noto Color Emoji';
+  }
+
+  a,
+  button {
+    @apply focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-secondary-soft;
   }
 
   /* nunito-200 - latin */
