organize images and vectors

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@
   }
 
   .abstract-bg {
-    background-image: url('/abstract.svg');
+    background-image: url('/vectors/abstract.svg');
   }
 }
 
