try preload and font-display optional

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,7 +34,7 @@
     font-family: 'Nunito';
     font-style: normal;
     font-weight: 200;
-    font-display: swap;
+    font-display: optional;
     src: url('/fonts/nunito-v16-latin-200.eot'); /* IE9 Compat Modes */
     src: local(''),
       url('/fonts/nunito-v16-latin-200.eot?#iefix') format('embedded-opentype'),
@@ -51,7 +51,7 @@
     font-family: 'Nunito';
     font-style: italic;
     font-weight: 200;
-    font-display: swap;
+    font-display: optional;
     src: url('/fonts/nunito-v16-latin-200italic.eot'); /* IE9 Compat Modes */
     src: local(''),
       url('/fonts/nunito-v16-latin-200italic.eot?#iefix')
@@ -70,7 +70,7 @@
     font-family: 'Nunito';
     font-style: normal;
     font-weight: 300;
-    font-display: swap;
+    font-display: optional;
     src: url('/fonts/nunito-v16-latin-300.eot'); /* IE9 Compat Modes */
     src: local(''),
       url('/fonts/nunito-v16-latin-300.eot?#iefix') format('embedded-opentype'),
@@ -87,7 +87,7 @@
     font-family: 'Nunito';
     font-style: italic;
     font-weight: 300;
-    font-display: swap;
+    font-display: optional;
     src: url('/fonts/nunito-v16-latin-300italic.eot'); /* IE9 Compat Modes */
     src: local(''),
       url('/fonts/nunito-v16-latin-300italic.eot?#iefix')
@@ -106,7 +106,7 @@
     font-family: 'Nunito';
     font-style: normal;
     font-weight: 400;
-    font-display: swap;
+    font-display: optional;
     src: url('/fonts/nunito-v16-latin-regular.eot'); /* IE9 Compat Modes */
     src: local(''),
       url('/fonts/nunito-v16-latin-regular.eot?#iefix')
@@ -124,7 +124,7 @@
     font-family: 'Nunito';
     font-style: italic;
     font-weight: 400;
-    font-display: swap;
+    font-display: optional;
     src: url('/fonts/nunito-v16-latin-italic.eot'); /* IE9 Compat Modes */
     src: local(''),
       url('/fonts/nunito-v16-latin-italic.eot?#iefix')
@@ -142,7 +142,7 @@
     font-family: 'Nunito';
     font-style: normal;
     font-weight: 600;
-    font-display: swap;
+    font-display: optional;
     src: url('/fonts/nunito-v16-latin-600.eot'); /* IE9 Compat Modes */
     src: local(''),
       url('/fonts/nunito-v16-latin-600.eot?#iefix') format('embedded-opentype'),
@@ -159,7 +159,7 @@
     font-family: 'Nunito';
     font-style: italic;
     font-weight: 600;
-    font-display: swap;
+    font-display: optional;
     src: url('/fonts/nunito-v16-latin-600italic.eot'); /* IE9 Compat Modes */
     src: local(''),
       url('/fonts/nunito-v16-latin-600italic.eot?#iefix')
@@ -178,7 +178,7 @@
     font-family: 'Nunito';
     font-style: normal;
     font-weight: 700;
-    font-display: swap;
+    font-display: optional;
     src: url('/fonts/nunito-v16-latin-700.eot'); /* IE9 Compat Modes */
     src: local(''),
       url('/fonts/nunito-v16-latin-700.eot?#iefix') format('embedded-opentype'),
@@ -195,7 +195,7 @@
     font-family: 'Nunito';
     font-style: italic;
     font-weight: 700;
-    font-display: swap;
+    font-display: optional;
     src: url('/fonts/nunito-v16-latin-700italic.eot'); /* IE9 Compat Modes */
     src: local(''),
       url('/fonts/nunito-v16-latin-700italic.eot?#iefix')
@@ -214,7 +214,7 @@
     font-family: 'Nunito';
     font-style: normal;
     font-weight: 800;
-    font-display: swap;
+    font-display: optional;
     src: url('/fonts/nunito-v16-latin-800.eot'); /* IE9 Compat Modes */
     src: local(''),
       url('/fonts/nunito-v16-latin-800.eot?#iefix') format('embedded-opentype'),
@@ -231,7 +231,7 @@
     font-family: 'Nunito';
     font-style: italic;
     font-weight: 800;
-    font-display: swap;
+    font-display: optional;
     src: url('/fonts/nunito-v16-latin-800italic.eot'); /* IE9 Compat Modes */
     src: local(''),
       url('/fonts/nunito-v16-latin-800italic.eot?#iefix')
@@ -250,7 +250,7 @@
     font-family: 'Nunito';
     font-style: normal;
     font-weight: 900;
-    font-display: swap;
+    font-display: optional;
     src: url('/fonts/nunito-v16-latin-900.eot'); /* IE9 Compat Modes */
     src: local(''),
       url('/fonts/nunito-v16-latin-900.eot?#iefix') format('embedded-opentype'),
@@ -267,7 +267,7 @@
     font-family: 'Nunito';
     font-style: italic;
     font-weight: 900;
-    font-display: swap;
+    font-display: optional;
     src: url('/fonts/nunito-v16-latin-900italic.eot'); /* IE9 Compat Modes */
     src: local(''),
       url('/fonts/nunito-v16-latin-900italic.eot?#iefix')
