--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,7 +34,7 @@
     font-family: 'Nunito';
     font-style: normal;
     font-weight: 200;
-    font-display: optional;
+    font-display: swap;
     src: local(''), url('/fonts/nunito-v16-latin-200.woff2') format('woff2'),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
         url('/fonts/nunito-v16-latin-200.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -44,7 +44,7 @@
     font-family: 'Nunito';
     font-style: italic;
     font-weight: 200;
-    font-display: optional;
+    font-display: swap;
     src: local(''),
       url('/fonts/nunito-v16-latin-200italic.woff2') format('woff2'),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
@@ -55,7 +55,7 @@
     font-family: 'Nunito';
     font-style: normal;
     font-weight: 300;
-    font-display: optional;
+    font-display: swap;
     src: local(''), url('/fonts/nunito-v16-latin-300.woff2') format('woff2'),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
         url('/fonts/nunito-v16-latin-300.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -65,7 +65,7 @@
     font-family: 'Nunito';
     font-style: italic;
     font-weight: 300;
-    font-display: optional;
+    font-display: swap;
     src: local(''),
       url('/fonts/nunito-v16-latin-300italic.woff2') format('woff2'),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
@@ -76,7 +76,7 @@
     font-family: 'Nunito';
     font-style: normal;
     font-weight: 400;
-    font-display: optional;
+    font-display: swap;
     src: local(''), url('/fonts/nunito-v16-latin-regular.woff2') format('woff2'),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
         url('/fonts/nunito-v16-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -86,7 +86,7 @@
     font-family: 'Nunito';
     font-style: italic;
     font-weight: 400;
-    font-display: optional;
+    font-display: swap;
     src: local(''), url('/fonts/nunito-v16-latin-italic.woff2') format('woff2'),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
         url('/fonts/nunito-v16-latin-italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -96,7 +96,7 @@
     font-family: 'Nunito';
     font-style: normal;
     font-weight: 600;
-    font-display: optional;
+    font-display: swap;
     src: local(''), url('/fonts/nunito-v16-latin-600.woff2') format('woff2'),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
         url('/fonts/nunito-v16-latin-600.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -106,7 +106,7 @@
     font-family: 'Nunito';
     font-style: normal;
     font-weight: 700;
-    font-display: optional;
+    font-display: swap;
     src: local(''), url('/fonts/nunito-v16-latin-700.woff2') format('woff2'),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
         url('/fonts/nunito-v16-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -116,7 +116,7 @@
     font-family: 'Nunito';
     font-style: italic;
     font-weight: 700;
-    font-display: optional;
+    font-display: swap;
     src: local(''),
       url('/fonts/nunito-v16-latin-700italic.woff2') format('woff2'),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
@@ -127,7 +127,7 @@
     font-family: 'Nunito';
     font-style: italic;
     font-weight: 600;
-    font-display: optional;
+    font-display: swap;
     src: local(''),
       url('/fonts/nunito-v16-latin-600italic.woff2') format('woff2'),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
@@ -138,7 +138,7 @@
     font-family: 'Nunito';
     font-style: normal;
     font-weight: 800;
-    font-display: optional;
+    font-display: swap;
     src: local(''), url('/fonts/nunito-v16-latin-800.woff2') format('woff2'),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
         url('/fonts/nunito-v16-latin-800.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -148,7 +148,7 @@
     font-family: 'Nunito';
     font-style: italic;
     font-weight: 800;
-    font-display: optional;
+    font-display: swap;
     src: local(''),
       url('/fonts/nunito-v16-latin-800italic.woff2') format('woff2'),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
@@ -159,7 +159,7 @@
     font-family: 'Nunito';
     font-style: normal;
     font-weight: 900;
-    font-display: optional;
+    font-display: swap;
     src: local(''), url('/fonts/nunito-v16-latin-900.woff2') format('woff2'),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
         url('/fonts/nunito-v16-latin-900.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -169,7 +169,7 @@
     font-family: 'Nunito';
     font-style: italic;
     font-weight: 900;
-    font-display: optional;
+    font-display: swap;
     src: local(''),
       url('/fonts/nunito-v16-latin-900italic.woff2') format('woff2'),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
